possible fix for horizontal scroll bug; also now close transition is missing

--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@ body {
   z-index: 9;
   background-color: #437899;
   height: 80px;
-  position: absolute;
   margin-top: 8px;
   width: 80px;
   margin-left: -5px;
